# GraphFlow

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  input.txt  openapi.json  out.excalidraw.json
docs/: design.md
excali-canvas/: README.md  index.html  package-lock.json
excali-canvas/src/: App.tsx  index.css
excali-canvas/src/components/: DocumentUpload.tsx  Footer.tsx  Navbar.tsx  TransparentLogo.tsx
excali-canvas/src/contexts/: AuthContext.tsx
excali-canvas/src/integrations/api/: client.ts
excali-canvas/src/pages/: Auth.tsx  Editor.tsx  Examples.tsx  Pricing.tsx  Welcome.tsx
excali-canvas/supabase/: config.toml
excali-canvas/supabase/functions/check-subscription/: index.ts
excali-canvas/supabase/functions/create-checkout/: index.ts
excali-canvas/supabase/functions/customer-portal/: index.ts
excali-canvas/supabase/functions/generate-diagram/: index.ts
excali-canvas/supabase/functions/generate-graph/: index.ts
excali-canvas/supabase/migrations/: 20251113231309_e5624747-1b95-457f-b343-17ef324f3023.sql
src/: excalidraw.rs  flow.rs  lib.rs  main.rs  nodes.rs  server.rs  state.rs  utils.rs
tests/: openapi_spec.rs  openapi_validation.rs
tools/render-excalidraw/: index.html  out.excalidraw.json  package-lock.json  package.json  render.js
