[package]
name = "GraphFlow"
version = "0.1.0"
edition = "2021"

[dependencies]
pocketflow_rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-openai = "0.30"
anthropic-sdk-rust = "0.1"
dotenvy = "0.15"
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["fs", "cors"] }
utoipa = { version = "4", features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
openapiv3 = "2"
